// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`<AccountItem> renders account data with holder 1`] = `
<div>
  <p>
    1
    : 
    bank account
     (
    Bank of Ireland
    )
  </p>
</div>
`;

exports[`<AccountItem> renders account data without holder 1`] = `
<div>
  <p>
    2
    : 
    cash account
     (
    N/A
    )
  </p>
</div>
`;
